--- a/summary.tex
+++ b/summary.tex
@@ -24,7 +24,7 @@ in conditions where votes contain noise or are randomly biased.
 
 We have also considered problem \textsc{ConsistentVotersOptimalDecloning}
 which uses a different clone set error function than \textsc{ComponentOptimalDecloning}.
-Its error function returns how many voters has to be removed from the elections
+Its error function returns how many voters have to be removed from the elections
 to make the given candidate subset a clone set.
 
 Table \ref{cclasses} summarizes complexity classes of studied decloning problems.
