--- a/bib.bib
+++ b/bib.bib
@@ -37,14 +37,17 @@
     author  = "Edith Elkind and Piotr Faliszewski and Arkadii Slinko",
     title   = "Clone Structures in Voters' Preferences",
     year    = "2011",
+    journal   = {CoRR},
+    volume    = {abs/1110.3939},
 }
 
 @article{cloninginelections,
     author  = "Edith Elkind and Piotr Faliszewski and Arkadii Slinko",
-    title   = "Cloning in Elections",
+    title   = "Cloning in Elections: Finding the Possible Winners",
     year    = "2011",
     journal = "Journal of Artificial Intelligence Research",
     volume  = "42",
+    pages   = "529--573",
 }
 
 @article{usingcomplexity,
@@ -53,6 +56,8 @@
     year    = "2010",
     journal = "Communications of the ACM",
     volume  = "53",
+    number  = "11",
+    pages   = "74--82",
 }
 
 @article{usingcomp1,
@@ -60,6 +65,9 @@
     title   = "Single transferable vote resists strategic voting",
     year    = "1991",
     journal = "Social Choice and Welfare",
+    volume  = "8",
+    number  = "4",
+    pages   = "341--354",
 }
 
 @article{usingcomp2,
@@ -67,6 +75,9 @@
    title    = "The computational difficulty of manipulating an election",
    year     = "1989",
    journal  = "Social Choice and Welfare",
+   volume   = "6",
+   number   = "2",
+   pages    = "157-165",
 }
 
 @article{controlbyadding,
@@ -74,6 +85,9 @@
    title    = "How hard is it to control an election?",
    year     = "1992",
    journal  = "Mathematical and Computer Modeling",
+   volume   = "16",
+   number   = "8/9",
+   pages    = "27--40",
 }
 
 
@@ -118,27 +132,38 @@
 }
 
 @article{karamata,
-    author = "Zoran Kadelburg and Dušan Dukić and Milivoje Lukić and Ivan Matić",
-    title = "Inequalities of Karamata, Schur and Muirhead, and Some Applications",
-    year = "2005",
+    author  = "Zoran Kadelburg and Dušan Dukić and Milivoje Lukić and Ivan Matić",
+    title   = "Inequalities of {Karamata}, {Schur} and {Muirhead}, and Some Applications",
+    year    = "2005",
     journal = "The Teaching of Mathematics",
-    volume = "8",
+    volume  = "8",
+    number  = 1,
+    pages   = {31--45},
 }
 
-@article{bertrand,
+@misc{bertrand,
     author = "David Galvin",
     title = "Erdős's proof of Bertrand's postulate",
     year = "2006",
+    howpublished = {https://www3.nd.edu/~dgalvin1/pdf/bertrand.pdf},
 }
 
 @article{paxos,
 	author = "Leslie Lamport",
 	title  = "Paxos Made Simple",
 	year   = "2001",
+        journal = {SIGACT News},
+        volume = "32",
+        number = 4,
+        pages  = {18--25},
 }
 
 @article{strategiccandidacy,
 	author = "Bhaskar Dutta and Matthew Jackson and Michel Le Breton",
 	title  = "Strategic Candidacy and Voting Procedures",
-	year   = "1998",
+        journal= {Econometrica},
+        volume = {69},
+        number = {4},
+        pages  = {1013--1037},
+        year   = {2001},
 }
