--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -99,6 +99,7 @@ Kraków, 2015
 \end{center}
 
 \clearpage
+\thispagestyle{empty}
 
 \sloppy
 Oświadczam, świadomy odpowiedzialności karnej za poswiadczenie nieprawdy,
