--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -283,7 +283,7 @@ Now we will introduce some \np-hard (indeed, \np-complete) problems.
 	Question: Is there an $n$-element subset $A \subset S$ such that $\bigcup A = X$?
 \end{problem}
 
-\begin{thm} \label{x3s-is-hard}
+\begin{thm} \label{x3c-is-hard}
 \textsc{X3C} is \np-complete.
 \end{thm}
 
