--- a/bib.bib
+++ b/bib.bib
@@ -10,13 +10,20 @@
     title   = "Composition-consistent tournament solutions and social choice functions",
     year    = "1996",
     journal = "Social Choice and Welfare",
+    volume  = 13,
+  	pages   = {75--93},
+    publisher = {Springer},
 }
 
 @article{clones2,
    author   = "Jean-Francois Laslier",
-   title    = "Rank-based choice correspondencies",
+   title    = "Rank-based choice correspondences",
    year     = "1996",
    journal  = "Economics Letters",
+   volume   = {52},
+   number   = {3},
+   pages    = {279--286},
+   publisher= {Elsevier}
 }
 
 @article{clones3,
@@ -24,6 +31,10 @@
    title   = "Aggregation of preferences with a variable set of alternatives",
    year    = "2000",
    journal = "Social Choice and Welfare",
+   volume  = {17},
+   number  = {2},
+   pages   = {269--282},
+   publisher={Springer}
 }
 
 @article{independenceofclones,
@@ -31,14 +42,19 @@
    title   = "Independence of clones as a criterion for voting rules",
    year    = "1987",
    journal = "Social Choice and Welfare",
+   volume  = {4},
+   number  = {3},
+   pages   = {185--206},
+   publisher={Springer}
 }
 
-@article{clonestructures,
+@inproceedings{clonestructures,
     author  = "Edith Elkind and Piotr Faliszewski and Arkadii Slinko",
     title   = "Clone Structures in Voters' Preferences",
-    year    = "2011",
-    journal   = {CoRR},
-    volume    = {abs/1110.3939},
+    booktitle = {Proceedings of the 13th ACM conference on electronic commerce},
+    pages   = {496--513},
+    year    = {2012},
+    organization = {ACM}
 }
 
 @article{cloninginelections,
@@ -95,6 +111,9 @@
     author  = "Felix Brandt and Vincent Conitzer and Ulle Endriss",
     title   = "Computational Social Choice",
     year    = "2012",
+    journal={Multiagent systems},
+    pages={213--283},
+    publisher={MIT Press}
 }
 
 @article{rangevoting,
@@ -106,15 +125,17 @@
 @article{fallbackvoting,
 	author  = "Steven Brams and Remzi Sanver",
 	title   = "Voting Systems That Combine Approval and Preference",
-	year    = "2006",
+	pages   = {215--237},
+    year    = {2009},
+    publisher = {Springer}
 }
 
 
 @book{compcomplexity,
     author  = "Christos Papadimitriou",
     title   = "Computational Complexity",
-    publisher = "Addison-Wesley",
-    year    = "1993",
+    year    = {2003},
+    publisher = {John Wiley and Sons Ltd.}
 }
 
 @book{computersandintractability,
