titlepage in polish

--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -73,14 +73,18 @@
 
 \begin{titlepage}
 \begin{center}
-{\Large AGH University of Science and Technology}\\[0.2cm]
-{\Large Faculty of Computer Science,\\Electronics and Telecommunications}\\[0.4cm]
-{\Large Department of Computer Science}\\[1.5cm]
+\textsc{\Large Akademia Górniczo-Hutnicza \\ im. Stanisława Staszica w Krakowie}\\[0.2cm]
 
-{\Large Master's Thesis}\\[1.0cm]
+\includegraphics[width=70pt,viewport=250 350 350 500]{agh-logo.pdf}
+
+{\Large Wydział Informatyki, Elektroniki i Telekomunikacji}\\[0.4cm]
+{\Large Katedra Informatyki}\\[1.5cm]
+
+\textsc{{\huge Praca magisterska}}\\[1.0cm]
 
 \begin{spacing}{2}
-\textsc{\huge The Computational Complexity\\of~Detecting Clones in Elections}\\[3cm]
+\textbf{\textsc{\Large Złożoność obliczeniowa\\wykrywania klonów w wyborach}}\\[0.1cm]
+\textbf{\textsc{\Large The Computational Complexity\\of Detecting Clones in Elections}}\\[2cm]
 \end{spacing}
 
 \end{center}
@@ -88,9 +92,9 @@
 \vfill
 \begin{flushleft}
 \begin{tabular}{p{45mm}l}
-\large Author: & {\large \itshape Szymon Gut}\\[-1mm]
-\large Degree programme: & {\large \itshape Computer Science}\\[-1mm]
-\large Supervisor: & {\large \itshape dr hab. inż. Piotr Faliszewski}\\[2.0cm]
+\large Imię i nazwisko: & {\large Szymon Gut}\\[-1mm]
+\large Kierunek studiów: & {\large Informatyka}\\[-1mm]
+\large Opiekun pracy: & {\large dr hab. inż. Piotr Faliszewski}\\[2.0cm]
 \end{tabular}
 \end{flushleft}
 
